@@ -39,6 +39,10 @@ SimGrid (3.3.5-svn) unstable; urgency=low
     o cpu_model -> cpu/model
     o network_model -> network/model
     o workstation_model -> workstation/model
+  * New configuration variables:
+    o network/bandwidth_factor: correction to bandwith
+    o network/latency_factor: correction to latency
+    o netwotk/weight_S: correction to the weight of competing streams
  SMPI:
   * Implement MPI_Get_count, MPI_MAXLOC, MPI_MINLOC
  XBT:
